--- a/Dockerfile-prepare
+++ b/Dockerfile-prepare
@@ -1,1 +1,13 @@
+FROM alpine:3.14
 
+RUN mkdir -p /data/inputs
+RUN mkdir -p /data/outputs
+
+WORKDIR /shetran
+
+COPY ./Shetran-Model-Linux-EasySetup-Snow_4_5_2/shetran-prepare-snow ./
+COPY ./Shetran-Model-Linux-EasySetup-Snow_4_5_2/*.so* ./
+
+ENV PLATFORM="docker"
+
+ENTRYPOINT ["python","-u","run.py"]
