--- a/Dockerfile-prepare
+++ b/Dockerfile-prepare
@@ -1,4 +1,8 @@
-FROM alpine:3.14
+FROM python:3.8
+
+RUN apt update -y
+RUN apt upgrade -y
+RUN apt install -y gfortran
 
 RUN mkdir -p /data/inputs
 RUN mkdir -p /data/outputs
@@ -7,7 +11,10 @@ WORKDIR /shetran
 
 COPY ./Shetran-Model-Linux-EasySetup-Snow_4_5_2/shetran-prepare-snow ./
 COPY ./Shetran-Model-Linux-EasySetup-Snow_4_5_2/*.so* ./
+COPY ./Shetran-Model-Linux-EasySetup-Snow_4_5_2/run_prepare.py ./
+
+RUN chmod +x shetran-prepare-snow
 
 ENV PLATFORM="docker"
 
-ENTRYPOINT ["python","-u","run.py"]
+ENTRYPOINT ["python", "-u", "run_prepare.py"]
