--- a/model-definition-prepare.yml
+++ b/model-definition-prepare.yml
@@ -1,1 +1,30 @@
-
+kind: Model
+api_version: v1beta1
+metadata:
+  display_name: PYRAMID <model> SHETRAN prepare
+  name: pyramid-shetran-prepare
+  summary: Prepares data for SHETRAN
+  publisher: Newcastle University
+  description: >
+    Prepares SHETRAN data
+spec:
+  inputs:
+    parameters:
+      - name: NAME
+        title: Run name
+        type: string
+        description: Name for the run, used in the title field of the metadata file.
+        default: PYRAMID <model> SHETRAN prepare
+        required: true
+    dataslots:
+      - name: Weather data sample for SHETRAN
+        description: >
+          Description of the dataset format
+        default:
+          - 24830682-c2dd-4066-b64c-951484a2185d
+        path: inputs
+        required: true
+  outputs:
+    datasets:
+      - name: PYRAMID <model> SHETRAN prepare output
+        description: Prepared SHETRAN data for SHETRAN run
