--- a/.github/workflows/release-prepare.yml
+++ b/.github/workflows/release-prepare.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Docker Build
-        run: docker build -t pyramid-shetran-prepare:latest .
+        run: docker build . -t pyramid-shetran-prepare:latest -f Dockerfile-prepare
 
       - name: Compress docker image
         run: docker save pyramid-shetran-prepare:latest | gzip > pyramid-shetran-prepare.tar.gz
