Updated README.md; changed ENTRYPOINT to CMD in Dockerfiles; minor fix to run_run.py

--- a/Dockerfile-prepare
+++ b/Dockerfile-prepare
@@ -17,4 +17,4 @@ RUN chmod +x shetran-prepare-snow
 
 ENV PLATFORM="docker"
 
-ENTRYPOINT ["python", "-u", "run_prepare.py"]
+CMD ["python", "-u", "run_prepare.py"]
