--- a/model-definition-run.yml
+++ b/model-definition-run.yml
@@ -1,5 +1,5 @@
-kind: Model
-api_version: v1beta1
+kind: M
+api_version: v1beta2
 metadata:
   display_name: PYRAMID <model> SHETRAN run
   name: pyramid-shetran-run
@@ -27,4 +27,5 @@ spec:
   outputs:
     datasets:
       - name: PYRAMID <model> SHETRAN results
+        type: txt
         description: Results from a PYRAMID SHETRAN run
