--- a/.github/workflows/release-run.yml
+++ b/.github/workflows/release-run.yml
@@ -24,7 +24,12 @@ jobs:
         run: cp model-definition-run.yml model-definition.yml
   
       - name: Set tag as env
-        run: echo "TAG=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        
+      - name: Verify release version tag
+        run: |
+          echo $RELEASE_VERSION
+          echo ${{ env.RELEASE_VERSION }}
 
       - name: Upload to DAFNI
         uses: dafnifacility/dafni-model-uploader@v1.9
@@ -33,5 +38,5 @@ jobs:
           image-path: './pyramid-shetran-run.tar.gz'
           username: ${{ secrets.DAFNI_SERVICE_ACCOUNT_USERNAME }}
           password: ${{ secrets.DAFNI_SERVICE_ACCOUNT_PASSWORD }}
-          version-message: ${{ env.TAG }}
+          version-message: ${{ env.RELEASE_VERSION }}
           parent-model: "6756ebb2-b1f6-41cf-87e1-58533583801d"
